(lang dune 3.20)

(name advent-of-hardware)

(generate_opam_files true)

(source
 (github scholzy/advent-of-fpga-1))

(authors "Michael Scholz <m@scholz.moe>")

(maintainers "Michael Scholz <m@scholz.moe>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name advent-of-hardware)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
